tests/valid/func_int_bug_main.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module func_int_bug_main.
:- import_module func_int_bug.
